# dumbclip

./: Cargo.toml  LICENSE.md  README.md
dumbclip-lv2/: dumbclip.ttl  manifest.ttl
src/: lib.rs
